--- a/servlet/src/main/resources/application.properties
+++ b/servlet/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/roles?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=Wx6874024
+
+scrapy-roleByFilter-endTxt=/srv/scrapy/roleByFilter/roleByFilter/end.txt
