feat: 留言功能、公告功能

--- a/servlet/src/main/resources/application.properties
+++ b/servlet/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.username=root
 spring.datasource.password=Wx6874024
 
 scrapy-roleByFilter-endTxt=/srv/scrapy/roleByFilter/roleByFilter/end.txt
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
