--- a/servlet/pom.xml
+++ b/servlet/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>dom4j</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
